--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     bitcoin: 'Bitcoin (BTC)',
                     ethereum: 'Ethereum (ETH)',
                     binancecoin: 'Binance Coin (BNB)',
-                    ripple: 'Ripple (XRP)',
+                    aptos: 'Aptos (APT)',
                     cardano: 'Cardano (ADA)'
                 };
 
